# qgis-oauth-cxxplugin

./: .gitignore  CMakeLists.txt  README.md
build-scripts/: build_macos.sh  build_win64.bat
cmake/modules/: FindO2.cmake  FindQCA.cmake  FindQGIS.cmake  FindQJSON.cmake
oauth2/: CMakeLists.txt  oauth2_config.json  oauth2_resources.qrc  oauth2_verification_finished.html  qgsauthoauth2config.cpp  qgsauthoauth2config.h  qgsauthoauth2edit.cpp  qgsauthoauth2edit.h  qgsauthoauth2edit.ui  qgsauthoauth2method.cpp  qgsauthoauth2method.h  qgso2.cpp  qgso2.h  qgspasswordlineedit.h
oauth2-test-app/: CMakeLists.txt  browser.cpp  browser.h  browser.ui  config.h.in  images  main.cpp  oauth2-test-app-64.bat  testwidget.cpp  testwidget.h  testwidget.ui
oauth2/cmake/: DownloadO2.cmake  External_O2.cmake  FindO2.cmake  FindQJSON.cmake  FindQtKeychain.cmake
oauth2/oauth2_config_samples/QGIS2/: OAuth2-Google-authcode.json
oauth2/qgis2-ui/: qgspasswordlineedit.cpp  qgspasswordlineedit.h
oauth2/qjsonwrapper/: Json.cpp  Json.h  README.md
scripts/: build_win64.bat
test/: CMakeLists.txt  qgstest.h  testqgsauthoauth2config.cpp  testutils.h
test/python/: README.md  oauth2_server.py  run_server.sh  test.sh  test_oauth2plugin.py
tests/: testqgsauthoauth2config.cpp  testutils.h
